Updated the projects section

--- a/about_me.html
+++ b/about_me.html
@@ -44,7 +44,7 @@ height="25" width="25" style="position: relative; top:4px;">Blog</a></li>
 				<div class="information">		
 				Hi,
 					My name is Azam Abdulkadir, and I love all things science and technology related.
-					I enjoy building all kinds of things. Most of which involve programming. I am currently a student at the University of Maryland double majoring in Computer Science and Physics. When I 
+					I enjoy building all kinds of things, most of which involve programming. I am currently a student at the University of Maryland double majoring in Computer Science and Physics. When I 
 					am not building things I am either hanging out with friends or at the gym. But anyways,
 					if you would like to contact me you can email me at:
 						AbdulkadirAzam@gmail.com
